@@ -21,7 +21,6 @@ package fr.pilato.elasticsearch.crawler.fs.framework;
 
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -51,7 +50,7 @@ public class MetaFileHandler {
         if (subdir != null) {
             dir = dir.resolve(subdir);
         }
-        return new String(Files.readAllBytes(dir.resolve(filename)), StandardCharsets.UTF_8);
+        return Files.readString(dir.resolve(filename));
     }
 
     /**
@@ -71,7 +70,7 @@ public class MetaFileHandler {
                 Files.createDirectory(dir);
             }
         }
-        Files.write(dir.resolve(filename), content.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(dir.resolve(filename), content);
     }
 
     /**
